CHANGES for THREDDS Data Server (TDS)
Version @VERSION.MINOR@
Build Date = @BUILDTIME@

Release Details 4.1:
 4.1.2 (2010-01-27)
   Improve ability to run multiple TDS on a single Tomcat instance.
   RadarServer: add new high-res Level 3 products.
   Clean up log messages from TDS reinit (catalogInit.log) and from GRIB IOSP sync().
   For motherlode, reorganize test datasets and catalogs: out of catalog.xml (and elsewhere) and into testCatalog.xml.
   Fix handling of OGCMeta.xml file when its location is configured in threddsConfig.xml with relative path.
   netCDF-Java/CDM:
     Add new high-res Level 3 radar products
     Fix for WRF lat/lon vertical transform
     Fix HDF5 IOSP to set attribute unsigned flag.
     MSG Navigation
     Improve GridDataset/GridCoordSys ensemble dimension handling.
     More BUFR work
     Add to COSMIC convention handling.
   GRIB:
     Update GRIB-2 parameter tables
     Make GDS scanning mode accessible
 4.1.1 (2010-01-06)
   Fix to UTM projection
   Fix for McIDAS IOSP isValid() method
   Several minor logging fixes and move FMRC logging from models.log to threddsServlet.log
   Update idv/models.xml IDs (for motherlode)
 4.1.0 (2009-12-29)
   Fix early closing of WCS dataset.
   Clean up logging and improve some exception handling.
   Resource control (authorization) API: allow for external access to and use of information (e.g., in a Servlet Filter)
   Fix base URI used by OPeNDAP servlet.
   Fix ToolsUI Viewer getViewerLinkHtml(...).
 alpha 17 (2009-12-21):
   Update to FMRC definition files (for motherlode).
 alpha 16 (2009-12-21):
   Fix GRIB variable name truncation on probability generated variables.
 alpha 15 (2009-12-18):
   CdmInit: set default aggregation.typicalDataset to penultimate, so it uses recent dataset for template
 alpha 14 (2009-12-15):
   Use absolute URL for catalog docBaseURI in LocalCatalogServiceController. 
   netCDF-Java/CDM:
     Vis5D IOSP: new
     more BUFR
     add AlbersEllipse to GeoTIFF writer