@@ -106,69 +106,4 @@ public class BoundingBoxDataReader extends DefaultDataReader
                 }
             }
         }
-
-
-
-
-    /**
-     * Reads data from the given GridDatatype and populates the given pixel array.
-     * This uses a bounding-box algorithm: all data from the surrounding bounding
-     * box are extracted in one go, then the necessary points are picked out.
-     * This often leads to a lot of data being read from disk, but only one
-     * read operation is required.
-     */
-    /*@Override
-    protected void populatePixelArray(float[] picData, Range tRange, Range zRange,
-        PixelMap pixelMap, GridDatatype grid, VariableDS var) throws Exception
-
-  //protected void populatePixelArray(float[] picData, Range tRange, Range zRange,
-  //      PixelMap pixelMap, GridDatatype grid, EnhanceScaleMissing enhanced) throws Exception
-    {
-        // Read the whole chunk of x-y data
-        Range iRange = new Range(pixelMap.getMinIIndex(), pixelMap.getMaxIIndex());
-        Range jRange = new Range(pixelMap.getMinJIndex(), pixelMap.getMaxJIndex());
-        long start = System.currentTimeMillis();
-        GridDatatype subset = grid.makeSubset(null, null, tRange, zRange, jRange, iRange);
-        // Read all of the x-y data in this subset
-        Array arr = subset.readDataSlice(0, 0, -1, -1).reduce();
-        logger.debug("Rank of arr = {}", arr.getRank());
-        for (int i : arr.getShape())
-        {
-            logger.debug("Dimension size = {}", i);
-        }
-        DataChunk dataChunk = new DataChunk(arr);
-        long readData = System.currentTimeMillis();
-        logger.debug("Read data using bounding box algorithm in {} milliseconds", (readData - start));
-
-        // Now create the picture from the data array
-        for (int j : pixelMap.getJIndices())
-        {
-            for (int i : pixelMap.getIIndices(j))
-            {
-                try
-                {
-                    float val = dataChunk.getValue(j - pixelMap.getMinJIndex(),
-                        i - pixelMap.getMinIIndex());
-                    // We unpack and check for missing values just for
-                    // the points we need to display.
-
-                    //TODO: find convertScaleOffsetMissing(val) in new NetCDF 4.0
-                    val = (float) var.convertScaleOffsetMissing(val);
-
-                    //val = (float)enhanced.convertScaleOffsetMissing(val);
-                    for (int pixelIndex : pixelMap.getPixelIndices(i, j))
-                    {
-                        picData[pixelIndex] = val;
-                    }
-                }
-                catch(ArrayIndexOutOfBoundsException aioobe)
-                {
-                    logger.error("Array index ({},{}) out of bounds",
-                        j - pixelMap.getMinJIndex(), i - pixelMap.getMinIIndex());
-                    throw aioobe;
-                }
-            }
-        }
-    }*/
-    
 }
