@@ -3,6 +3,8 @@ Version @VERSION.MINOR@
 Build Date = @BUILDTIME@
 
 Release Details 4.1:
+ 4.x.x (2010-?-?)
+   Fix WMS problem in sampling scheme when a slice results in a single value which is then reduce()-ed to an Array with rank=0 (from ncWMS changeset 464).
  4.1.2 (2010-01-27)
    Improve ability to run multiple TDS on a single Tomcat instance.
    RadarServer: add new high-res Level 3 products.
